ingress.ml/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "*.pipeline.io"
    secretName: tls-certificate
  rules:
  - host: grafana.pipeline.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
