ingress.ml/prediction-python3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prediction-python3
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "*.pipeline.io"
    secretName: tls-certificate
  rules:
  - host: prediction-python3.pipeline.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prediction-python3
          servicePort: 80
