ingress.ml/prometheus-k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "*.pipeline.io"
    secretName: tls-certificate
  rules:
  - host: prometheus-k8s.pipeline.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 80
